updating up to theme analysis

--- a/notebooks/yogurt.ipynb
+++ b/notebooks/yogurt.ipynb
@@ -2,17 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "<center>\n",
     "    <h1>🍶 <b style=\"color: lightblue\">\"Churning\"</b> the data 🍶</h1>\n",
-    "    <h3>An exploratory data analysis of yogurt brand <s>Twi...</s> <b style=\"font-size: 2rem; color: lightblue;\">𝕏</b></h3>\n",
+    "    <h3>An exploratory data analysis of yogurt brands <s>Twi...</s> <span style=\"color: cornflowerblue;\">𝕏</span>.com</h3>\n",
     "</center>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "- <b><span style=\"color:#0074D9\">Main Objective:</span></b> to give a detailed data analysis of data acquired from 𝕏 in order to equip our client with actionable, evidence-based insights.\n",
     "  - Provide a clean dataset, separated by company type\n",
@@ -23,77 +31,156 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Let's start by importing our dependencies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using MPS (Metal GPU) device.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING[XFORMERS]: xFormers can't load C++/CUDA extensions. xFormers was built for:\n",
+      "    PyTorch 2.0.1 with CUDA None (you have 2.1.0.dev20230803)\n",
+      "    Python  3.11.4 (you have 3.11.4)\n",
+      "  Please reinstall xformers (see https://github.com/facebookresearch/xformers#installing-xformers)\n",
+      "  Memory-efficient attention, SwiGLU, sparse and more won't be available.\n",
+      "  Set XFORMERS_MORE_DETAILS=1 for more details\n"
+     ]
+    }
+   ],
    "source": [
-    "# import all dependencies\n",
     "import os\n",
-    "from pathlib import Path\n",
-    "from IPython.display import display\n",
+    "# import all dependencies\n",
     "import sys\n",
+    "from pathlib import Path\n",
     "import pandas as pd\n",
+    "from IPython.display import display\n",
     "\n",
-    "# Ensure the root of your project is in sys.path\n",
-    "project_root = os.path.dirname(os.getcwd())\n",
-    "if project_root not in sys.path:\n",
-    "    sys.path.append(project_root)\n",
+    "os.chdir('..')\n",
+    "if os.getcwd() not in sys.path:\n",
+    "    sys.path.append(os.getcwd())\n",
     "\n",
     "from src.processing.preprocess import *\n",
-    "from src.resources.brands_data import Brand, brands"
+    "from src.resources.brands_data import Brand, brands\n",
+    "from src.resources.word_lists import *\n",
+    "from src.processing.sentiment_analysis import analyze"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## `Step 0: Setup the environment`\n",
+    "\n",
+    "1. Set up project using conda\n",
+    "2. Set up tiered, multi-environment approach utilizing either CUDA or MPS (Metal Performance Shaders) based on OS environment\n",
+    "    ```python\n",
+    "    # Check if MPS is available\n",
+    "    if torch.backends.mps.is_available():\n",
+    "        device = torch.device(\"mps\")\n",
+    "        print(\"Using MPS (Metal GPU) device.\")\n",
+    "    elif torch.cuda.is_available():\n",
+    "        device = torch.device(\"cuda\")\n",
+    "        print(\"Using CUDA device.\")\n",
+    "    else:\n",
+    "        device = torch.device(\"cpu\")\n",
+    "        print(\"Using CPU device.\")\n",
+    "    ```\n",
+    "3. Chose dependencies\n",
+    "    * [Twitter-roBERTa-base](https://huggingface.co/cardiffnlp/twitter-roberta-base-sentiment-latest) for Sentiment Analysis\n",
+    "    * [NLTK](https://www.nltk.org/) for tokenization and frequency analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## `Step 1: Clean the data`\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "### Data Preparation: 3 CSVs ➡ 1 DataFrame\n",
     "\n",
-    "We started our analysis by combining the separate raw csv files into a single dataframe.\n"
+    "* We started our analysis by combining the separate raw csv files into a single dataframe and removing any twitter links."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
+    "# preprocessing.preprocess_data()\n",
     "csv_list = get_csv_files()\n",
-    "print(f\"Number of csv files ::: {len(csv_list)}\")\n",
+    "\n",
     "combined_data_frame = combine_csv_data(csv_list)\n",
+    "\n",
     "# remove twitter links - regex test here https://regex101.com/r/wZ0dAP/1\n",
     "combined_data_frame[\"text\"] = combined_data_frame[\"text\"].str.replace(\n",
     "    r\"http[s]?://t\\.[^\\s]*|[^[$]]\", \"\", regex=True\n",
     ")\n",
-    "print(f\"Combined data frame length ::: {len(combined_data_frame)}\")\n",
     "\n",
+    "### Display datatable ###\n",
+    "print(f\"Number of csv files ::: {len(csv_list)}\")\n",
+    "print(f\"Combined data frame length ::: {len(combined_data_frame)} rows\")\n",
     "pd.set_option(\"display.max_columns\", 15)\n",
     "pd.set_option(\"display.max_colwidth\", 100)\n",
-    "display(combined_data_frame.iloc[10000:].head(3))"
+    "display(combined_data_frame.iloc[10000:].head(3))\n",
+    "### for display purposes ###"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Data Orgnization: Creation of a `Brand` Class\n",
     "\n",
-    "<div style=\"display: flex; justify-items: stretch;\">\n",
-    "    <div>\n",
+    "<div style=\"display: flex; justify-content: space-between\">\n",
+    "    <div style=\"margin: 2%\">\n",
     "\n",
     "```python\n",
     "@dataclass\n",
@@ -110,7 +197,7 @@
     "```\n",
     "\n",
     "</div>\n",
-    "<div style=\"justify-self: start;\">\n",
+    "<div style=\"margin-left: 3%; margin-right: 3%;\">\n",
     "\n",
     "#### Example Brand:\n",
     "\n",
@@ -141,7 +228,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Data Cleansing:\n",
     "\n",
@@ -149,17 +240,51 @@
     "\n",
     "<div>We took several steps in cleansing the data:</div>\n",
     "\n",
-    "1. <b><span style=\"color:#0074D9\">Determined Company List:</span></b> Given the unique names under the `file` column, we were left with [the following companies.](../notes/companies_list.txt)\n",
+    "1. <b><span style=\"color:#0074D9\">Created Company List:</span></b> Given the unique names under the `file` column, we were left with [the following companies.](../notes/companies_list.txt)\n",
     "    * We <span style=\"color:crimson\">removed</span> <i>Vanilla Bean</i> as it appeared to not be a valid company.  Keeping it also muddied the analysis process due to its association with food.\n",
-    "3. <b><span style=\"color:#0074D9\">Filtered Dataset:</span></b> We used several criteria to do this:\n",
+    "    <br><br>\n",
+    "2. <b><span style=\"color:#0074D9\">Filtered Dataset:</span></b> We used several criteria to do this:\n",
     "    * <u>[Word Association Lists](../src/resources/word_lists.py)</u> - given to brands based on their \"uniqueness\"\n",
-    "        * A brand like `Chobani` can be categorized as more unique than `Liberté` given its French origin.\n",
-    "        * `Greek Gods` is an example of a non-specific company name"
+    "        * A brand like <span style=\"color: goldenrod\">Chobani</span> can be categorized as more unique than <span style=\"color: goldenrod\">Liberté`</span> given its French origin.\n",
+    "        * <span style=\"color: goldenrod\">Greek Gods</span> is an example of a non-specific company name\n",
+    "    * <u>Removing Negative Keywords</u> - Limited keywords that are known exceptions\n",
+    "        * e.g. - A proper name like <span style=\"color: goldenrod\">Activia Jones</span> against a normally sufficiently unique <span style=\"color: goldenrod\">Activia</span> brand"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# preprocess.prepare_data_for_filtering()\n",
+    "brand = \"Greek Gods\"\n",
+    "\n",
+    "if brands[brand]:\n",
+    "    filtered_data_frame = filter_irrelevant_data(combined_data_frame, brand=brands[brand], relevancy_threshold=0)\n",
+    "    filtered_data_frame = remove_tweets_with_negative_keywords(filtered_data_frame, brands[brand])\n",
+    "\n",
+    "    pd.set_option(\"display.max_columns\", 10)\n",
+    "    pd.set_option(\"display.max_colwidth\", 100)\n",
+    "    display(filtered_data_frame.head(3))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "3. <b><span style=\"color: #0074D9\">Removing negative keywords:</span></b> Removed common instances that need specific filtering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -168,18 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "2. <b><span style=\"color: #0074D9\">Removing negative keywords:</span></b> Removed common instances that need specific filtering"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f\"\\n\\nBefore filtering ::: {len(combined_data_frame)} items.\")\n",
-    "\n",
-    "remove_tweets_with_negative_keywords(combined_data_frame, brands[\"Fage\"])"
+    "print(f\"\\n\\nBefore filtering ::: {len(combined_data_frame)} items.\")"
    ]
   },
   {
@@ -193,8 +307,9 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "ds_project",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -210,7 +325,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.11.4"
   },
-  "orig_nbformat": 4
+  "rise": {
+   "auto_select": "code",
+   "enable_chalkboard": true,
+   "scroll": true,
+   "theme": "night"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
