--- a/notebooks/yogurt.ipynb
+++ b/notebooks/yogurt.ipynb
@@ -42,33 +42,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using MPS (Metal GPU) device.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING[XFORMERS]: xFormers can't load C++/CUDA extensions. xFormers was built for:\n",
-      "    PyTorch 2.0.1 with CUDA None (you have 2.1.0.dev20230803)\n",
-      "    Python  3.11.4 (you have 3.11.4)\n",
-      "  Please reinstall xformers (see https://github.com/facebookresearch/xformers#installing-xformers)\n",
-      "  Memory-efficient attention, SwiGLU, sparse and more won't be available.\n",
-      "  Set XFORMERS_MORE_DETAILS=1 for more details\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "# import all dependencies\n",
@@ -300,9 +280,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. <b><span style=\"color:#0074D9\">Handle Ambiguities:</span></b> Some brand names might be similar to everyday words. Including alternative names can help us capture tweets from different regions and even help to catch common mispellings.\n",
-    "3. <b><span style=\"color:#0074D9\">Filter Out Noise:</span></b> Using negative keywords, we can eliminate irrelevant tweets, ensuring our insights are grounded in relevant data.\n",
-    "4. <b><span style=\"color:#0074D9\">Address Special Cases:</span></b> Some brands might have non-specific names (e.g. - a brand name closely associated with food)\n"
+    "## `Potential Improvements`\n",
+    "* Use NER (Named Entity Recognition) for getting yogurt and company related keywords\n",
+    "* Utilize NTLK for initial data filtering"
    ]
   }
  ],
