--- a/notebooks/yogurt.ipynb
+++ b/notebooks/yogurt.ipynb
@@ -257,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. <b><span style=\"color: #0074D9\">Removing negative keywords:</span></b> Removed common instances that need specific filtering"
+    "* We did not dedupe data "
    ]
   },
   {
@@ -265,7 +265,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "analyze(\n",
+    "    data_frame=filtered_data_frame,\n",
+    "    company_name=brand.lower().replace(\" \", \"_\"),\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
