--- a/notebooks/yogurt.ipynb
+++ b/notebooks/yogurt.ipynb
@@ -220,6 +220,8 @@
     "\n",
     "<div>We took several steps in cleansing the data:</div>\n",
     "\n",
+    "* We did not dedupe the text data as we wanted to track frequency of tweets.\n",
+    "\n",
     "1. <b><span style=\"color:#0074D9\">Created Company List:</span></b> Given the unique names under the `file` column, we were left with [the following companies.](../notes/companies_list.txt)\n",
     "    * We <span style=\"color:crimson\">removed</span> <i>Vanilla Bean</i> as it appeared to not be a valid company.  Keeping it also muddied the analysis process due to its association with food.\n",
     "    <br><br>\n",
@@ -255,15 +257,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "* We did not dedupe data "
+    "## `Step 2: Perform Sentiment Analysis`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "analyze(\n",
@@ -273,21 +283,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f\"\\n\\nBefore filtering ::: {len(combined_data_frame)} items.\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## `Potential Improvements`\n",
     "* Use NER (Named Entity Recognition) for getting yogurt and company related keywords\n",
-    "* Utilize NTLK for initial data filtering"
+    "* Utilize NTLK for initial data filtering\n",
+    "* Obtain a more complete dataset of yogurt brands and twitter handles\n",
+    "* Obtain a list of hashtags related to yogurt brands\n",
+    "* Multi-lingual analysis\n",
+    "    * Could remove false captures like \"activia\" as a brand"
    ]
   }
  ],
